--- a/10- Web_scrapping/templates/index.html
+++ b/10- Web_scrapping/templates/index.html
@@ -26,7 +26,7 @@
 
     <div class="container-fluid">
       <div class="jumbotron text-center" id="jumbo" > 
-          <h1 style="margin-bottom:40px;" id="text-color"> Misson To Mars</h1>
+          <h1 style="margin-bottom:40px;" id="text-color"> Mission To Mars</h1>
       <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
     </div> 
 
